--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-9 ">
-								<h3 class="cta-02__title">Looking for a high quality constructor company for your project?</h3>
+								<h3 class="cta-02__title">Looking for a high-quality, trustworthy company for your next project?</h3>
 							</div>
 							<div class="col-lg-3  md-text-right">
 								
 								<!-- btn -->
-								<a class="btn btn-outline" href="#">Get a quote
+								<a class="btn btn-outline" href="#id7">Contact Us
 								</a><!-- End / btn -->
 								
 							</div>
