--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
 													<textarea name="message" placeholder="Message" style="height: 150px;"></textarea>
 												</div><!-- End / form-item -->
 												
-												<button class="btn btn-primary btn-round mb-30" type="submit">Send message</button>
+												<button href="mailto:example@email.com?subject=New%20Project" class="btn btn-primary btn-round mb-30" type="submit">Send message</button>
 											</form>
 										</div>
 										<div class="col-lg-6 ">
