Update the about us section

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 										<h2 class="sec-title__title">About <span>FayetteWorx</span></h2><span class="sec-title__divider"></span>
 									</div><!-- End / sec-title -->
 									
-									<p>Founded in 2019 by longtime friends TJ Lee and Andrew McEwen, our multi-family construction consulting company is built on a shared passion for excellence and integrity in the industry.</p><br>
-									<p>With over 40 years of combined experience and a deep understanding of construction, we provide expert guidance to ensure projects are completed efficiently and to the highest standards. Our commitment to quality, collaboration, and client success drives everything we do.</p><br><br><a class="btn btn-primary btn-outline" href="#">Contact Us</a>
+									<p>Founded in 2019 by industry veterans TJ Lee and Andrew McEwen, FayetteWorx specializes in comprehensive remodeling services for multi-family properties.</p><br>
+									<p>With a combined 40+ years of experience in construction, we are committed to delivering high-quality work with quick turnaround times to meet the needs of our clients. Our expertise and dedication ensure every project is completed efficiently and to the highest standards.</p><br><br><a class="btn btn-primary btn-outline" href="#">Contact Us</a>
 								</div>
 							</div>
 							</div>
