--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								
 								<!-- team -->
 								<div class="team">
-									<div class="team__img"><img src="assets/img/team/1.jpg" alt=""/>
+									<div class="team__img"><img src="assets/img/team/Andrew.jpg" alt=""/>
 										<div class="team__overlay">
 											<div class="md-tb">
 												<div class="md-tb__cell md-text-center">
@@ -170,7 +170,7 @@
 									</div>
 									<div class="team__body">
 										<div class="team__user">
-											<h4 class="team__name">TJ Lee</h4><span class="team__work">Co_founder &amp; Founder</span>
+											<h4 class="team__name">TJ Lee</h4><span class="team__work">Co-Founder</span>
 										</div>
 									</div>
 								</div><!-- End / team -->
