use cropped pics

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								
 								<!-- team -->
 								<div class="team">
-									<div class="team__img"><img src="assets/img/team/Andrew.jpg" alt=""/>
+									<div class="team__img"><img src="assets/img/team/Andrew.png" alt=""/>
 										<div class="team__overlay">
 											<div class="md-tb">
 												<div class="md-tb__cell md-text-center">
@@ -145,7 +145,7 @@
 								
 								<!-- team -->
 								<div class="team">
-									<div class="team__img"><img src="assets/img/team/tj.jpg" alt=""/>
+									<div class="team__img"><img src="assets/img/team/TJ.png" alt=""/>
 										<div class="team__overlay">
 											<div class="md-tb">
 												<div class="md-tb__cell md-text-center">
