--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								
 								<!-- team -->
 								<div class="team">
-									<div class="team__img"><img src="assets/img/team/TJ.png" alt=""/>
+									<div class="team__img"><img style="height: '283.5px'" src="assets/img/team/TJ.png" alt=""/>
 										<div class="team__overlay">
 											<div class="md-tb">
 												<div class="md-tb__cell md-text-center">
