change bkgrd image

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				
 				
 				<!-- Section -->
-				<section class="md-section md-skin-dark" id="id6" style="background-image:url(&quot;assets/img/bg/demo.jpg&quot;);padding-bottom:50px;">
+				<section class="md-section md-skin-dark" id="id6" style="background-image:url(&quot;assets/img/bg/atl_skyline.jpeg&quot;);padding-bottom:50px;">
 					<div class="md-overlay"></div>
 					<div class="container">
 						<div class="row">
