--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 											    <input id="phone" type="tel" name="phone" placeholder="Phone" />
 											    <input id="subject" type="text" name="subject" placeholder="Subject" />
 											    <textarea id="message" name="message" placeholder="Message" style="height: 150px;"></textarea>
-											    <button id="send-email" class="btn btn-primary btn-round mb-30" type="button">Send Message</button>
+											    <button id="send-email" class="btn btn-primary btn-round mb-30" type="button"><a href:="mailto:smith.mike@mac.com,mike@mikeqsmith.com">Send Message</a></button>
 											</form>
 										</div>
 									</div>
