--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 										<h2 class="sec-title__title">About <span>FayetteWorx</span></h2><span class="sec-title__divider"></span>
 									</div><!-- End / sec-title -->
 									
-									<p>Founded in 2018 by industry veterans TJ Lee and Andrew McEwen, FayetteWorx specializes in comprehensive remodeling services for multi-family properties.</p><br>
-									<p>With a combined 40+ years of experience in construction, we are committed to delivering high-quality work with quick turnaround times to meet the needs of our clients. Our expertise and dedication ensure every project is completed efficiently and to the highest standards.</p><br><br><a class="btn btn-primary btn-outline" href="#">Contact Us</a>
+									<p>FayetteWorx specializes in comprehensive remodeling services for multi-family properties.</p><br>
+									<p>With a combined 40+ years of experience in construction, we are committed to delivering high-quality work with quick turnaround times to meet the needs of our clients. Our expertise and dedication ensure every project is completed efficiently and to the highest standards.</p><br>
 								</div>
 							</div>
 							</div>
@@ -238,8 +238,8 @@
 										<div class="col-lg-6 ">
 										    <div>
 											<span>If you want more info on the services we provide, please shoot us as email at:</span>
-										        <span id="textToCopy">smith.mike@mac.com</span>
-										        <button onclick="copyText('textToCopy')">Copy Email</button>
+										        <span id="textToCopy">tlee@fayetteworx.com, amcewen@fayetteworx.com</span>
+										        <button class="btn btn-primary btn-outline" onclick="copyText('textToCopy')">Copy Email</button>
 										    </div>
 										</div>
 									</div>
