add in some breaks and change text

--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
 									<div class="row"> 
 										<div class="col-lg-6 ">
 										    <div>
-											<span>If you want more info on the services we provide, please shoot us as email at:</span>
-										        <span id="textToCopy">tlee@fayetteworx.com, amcewen@fayetteworx.com</span>
+											<span>If you need more information about our services, please feel free to email us at:</span><br>
+										        <span id="textToCopy">tlee@fayetteworx.com, amcewen@fayetteworx.com</span><br><br>
 										        <button class="btn btn-primary btn-outline" onclick="copyText('textToCopy')">Copy Email</button>
 										    </div>
 										</div>
