change alert text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		            document.body.removeChild(tempTextArea);
 		
 		            // Optionally, provide feedback to the user
-		            alert("Text copied: " + text);
+		            alert("Email addresses copied: " + text);
 		        }
     		</script>
 	</head>
