--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 										    <div>
 											<span>If you need more information about our services, please feel free to email us at:</span><br>
 										        <span id="textToCopy">tlee@fayetteworx.com, amcewen@fayetteworx.com</span><br><br>
-										        <button class="btn btn-primary btn-outline" onclick="copyText('textToCopy')">Copy Email</button>
+										        <button class="btn btn-primary btn-outline" onclick="copyText('textToCopy')">Copy Our Emails</button>
 										    </div>
 										</div>
 									</div>
