--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				
 				
 				<!-- Section -->
-				<section class="md-section" id="id4" style="background-color:#fff;">
+				<section class="md-section" id="id4" style="background-color:#222;">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-8 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-2 ">
